# codex-video-tool

./: .gitignore  AGENTS.md  CLI_COPY_PASTE.md  LICENSE  README.md  USER_MANUAL.md  pyproject.toml
.github/workflows/: tests.yml
codex_video/: __init__.py  __main__.py  cli.py
docs/: CODEX_WORKFLOW.md  SPEC.md  TELECODEX_MIGRATION_NOTES.md
examples/: demo-spec.json
media/: README.md
media/music/: README.md
media/source-images/: README.md
scripts/: create_demo_assets.py
tests/: test_cli.py
